<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"

    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_first_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_zero_horizontal"
        app:srcCompat="@drawable/iconoruta" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        style="@style/editTextViewStyle"
        android:hint="@string/email_edit_text_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/guideline_second_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_first_horizontal" />

    <EditText
        android:id="@+id/name_edit_text"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/name_edit_text_placeholder"
        android:inputType="text"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_third_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_second_horizontal" />

    <EditText
        android:id="@+id/surname_edit_text"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/surname_edit_text_placeholder"
        android:inputType="text"
        android:layout_marginStart="5dp"
        android:maxWidth="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_third_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        app:layout_constraintTop_toTopOf="@+id/guideline_second_horizontal" />

    <EditText
        android:id="@+id/telephone_edit_text"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/telephone_edit_text_placeholder"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline_fourth_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_third_horizontal" />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_edit_text_placeholder"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_fifth_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_fourth_horizontal" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/confirm_password_edit_text_placeholder"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_sixth_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_fifth_horizontal" />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/MainButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/sign_up_text"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_sixth_horizontal" />

    <View
        android:id="@+id/sign_in_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:background="@color/nav_white_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left" />

    <TextView
        android:id="@+id/ask_no_account_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:textColor="@color/black"
        android:text="@string/ask_already_account"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintTop_toTopOf="@+id/sign_in_line"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/log_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/text_button_ok"
        android:textColor="@color/green_gray_white_mode"
        android:textSize="12sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ask_no_account_yet"
        app:layout_constraintTop_toTopOf="@+id/sign_in_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_zero_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_first_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_second_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_third_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_fourth_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_fifth_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sixth_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>