<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_first_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_zero_horizontal"
        app:srcCompat="@drawable/iconoruta" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        style="@style/editTextViewStyle"
        android:hint="@string/email_edit_text_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/guideline_second_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_first_horizontal" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_edit_text_placeholder"
        style="@style/editTextViewStyle"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_third_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_second_horizontal" />

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:layout_marginTop="10dp"
        android:text="@string/text_button_ok"
        style="@style/MainButtonsStyle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_third_horizontal" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/textViewSmall"
        app:layout_constraintTop_toBottomOf="@+id/button_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_log_in_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onClickLogInUsingGoogle"
        android:text="@string/button_sign_in_google"
        style="@style/SecondaryButtonsStyle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left_2"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

    <View
        android:id="@+id/sign_in_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/nav_white_mode"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left" />

    <TextView
        android:id="@+id/ask_no_account_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:textColor="@color/black"
        android:text="@string/ask_no_account_yet"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintTop_toTopOf="@+id/sign_in_line"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/sign_up_text"
        android:textSize="12sp"
        android:clickable="true"
        android:textColor="@color/green_gray_white_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ask_no_account_yet"
        app:layout_constraintTop_toTopOf="@+id/sign_in_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_zero_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_first_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_second_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_third_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />
</androidx.constraintlayout.widget.ConstraintLayout>