<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".CreateNewGroup">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/name_of_new_group_edittext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        style="@style/editTextViewStyle"
        android:hint="@string/name_of_new_group_edittext"
        app:layout_constraintBottom_toTopOf="@+id/guideline_second_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_first_horizontal" />

    <EditText
        android:id="@+id/list_invitation_new_members"
        style="@style/editTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/list_invitation_new_members"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="102dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_third_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_second_horizontal" />

    <Button
        android:id="@+id/button_add_new_member"
        style="@style/SecondaryButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="addNewMember"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:text="@string/add_new_member"
        app:layout_constraintBottom_toBottomOf="@+id/list_invitation_new_members"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toEndOf="@+id/list_invitation_new_members"
        app:layout_constraintTop_toTopOf="@+id/list_invitation_new_members" />

    <TextView
        android:id="@+id/list_of_new_members"
        style="@style/textViewApplicationTitleStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:layout_gravity="top|left"
        app:layout_constraintBottom_toTopOf="@+id/guideline_fourth_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_third_horizontal" />

    <Button
        android:id="@+id/button_done_create_new_group"
        style="@style/MainButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="confirmNewGroup"
        android:text="@string/create_new_group_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_margin_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_fourth_horizontal" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_first_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_second_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_third_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_fourth_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>